crates/language-v2/tests/src/fail/p3_references/wrong_lexical_context/test.stderr
error: Reference 'Three' is in context 'ContextA', but expected context 'ContextB'.
  --> src/fail/p3_references/wrong_lexical_context/test.rs:18:81
   |
18 | ...                   fields = (entry = Required(Two), field_1 = Required(Three))
   |                                                                           ^^^^^
